--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ douban/douban/__pycache__/items.cpython-37.pyc
 douban/douban/__pycache__/settings.cpython-37.pyc
 douban/douban/spiders/__pycache__/__init__.cpython-37.pyc
 douban/douban/spiders/__pycache__/top250.cpython-37.pyc
+jobui/jobui/__pycache__/__init__.cpython-37.pyc
+jobui/jobui/__pycache__/items.cpython-37.pyc
+jobui/jobui/__pycache__/settings.cpython-37.pyc
+jobui/jobui/spiders/__pycache__/__init__.cpython-37.pyc
+jobui/jobui/spiders/__pycache__/jobui_ jobs.cpython-37.pyc
